# keeprs

./: .gitignore  .gitmodules  Cargo.toml  README.md  default.toml
crates/keeprs-core/: Cargo.toml
crates/keeprs-core/src/: database.rs  lib.rs  models.rs
crates/keeprs-gui/: Cargo.toml
crates/keeprs-gui/src/: app.rs  config.rs  main.rs  style.css
crates/keeprs-gui/src/components/: column_view.rs  common.rs  entry_browser.rs  entry_detail_view.rs  entry_edit.rs  group_edit.rs  info_bar.rs  mod.rs  password_confirmation.rs  search_bar.rs  search_palette.rs  sidebar.rs
crates/keeprs-gui/src/widgets/: composite_icon.rs  mod.rs
crates/keeprs-tui/: Cargo.toml
crates/keeprs-tui/src/: app.rs  handlers.rs  main.rs  ui.rs
scripts/: hot_reload.sh
src/: app.rs  config.rs  database.rs  main.rs  models.rs  style.css
src/components/: column_view.rs  entry_edit.rs  entry_view.rs  mod.rs  search_bar.rs  search_palette.rs  sidebar.rs  unlock.rs
