[workspace]
resolver = "2"
members = [
    "crates/keeprs-core",
    "crates/keeprs-gui",
    "crates/keeprs-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# KeePass database handling
keepass = { path = "vendor/keepass", features = ["save_kdbx4", "totp"] }

# Config and serialization
serde = { version = "1.0", features = ["derive"] }

# Fuzzy search
fuzzy-matcher = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
