[package]
name = "keeprs-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for keeprs KeePass client"

[[bin]]
name = "keeprs-tui"
path = "src/main.rs"

[dependencies]
keeprs-core = { path = "../keeprs-core" }

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Fuzzy search
fuzzy-matcher.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI arguments
clap = { version = "4", features = ["derive"] }
